# bazel-cc_shared_library-transitive-deps

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  WORKSPACE  dep.cc  dep.h  main.cc  private.cc  private.h  transitive.cc  transitive.h
